log
Thu 05 Oct 2023 04:39:06 PM UTC: 
 tests:  0|5
total_score: 0/70
37e166c
Thu 05 Oct 2023 04:48:12 PM UTC: 
 sudoku.c | 16 ++++++++++++++++
 1 file changed, 16 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:64:33: error: assignment to ‘int’ from ‘Node *’ makes integer from pointer without a cast [-Werror=int-conversion]
   64 |           adNodo->sudo[fil][col]=n;
      |                                 ^
cc1: all warnings being treated as errors
Compilation failed
78d98b5
Thu 05 Oct 2023 04:48:19 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
abb1c61
Thu 05 Oct 2023 04:56:38 PM UTC: 
 sudoku.c | 29 ++++++++++++++++++++++++++++-
 1 file changed, 28 insertions(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:76:1: error: control reaches end of non-void function [-Werror=return-type]
   76 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
f726e21
Thu 05 Oct 2023 04:56:49 PM UTC: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:76:3: error: ‘return’ with no value, in function returning non-void [-Werror=return-type]
   76 |   return;
      |   ^~~~~~
sudoku.c:46:5: note: declared here
   46 | int is_valid(Node* n){
      |     ^~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
34aa55b
Thu 05 Oct 2023 04:56:54 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
2d9343f
Thu 05 Oct 2023 04:57:00 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
30fd40b
Thu 05 Oct 2023 04:57:36 PM UTC: 
 sudoku.c | 9 ++++-----
 1 file changed, 4 insertions(+), 5 deletions(-)
 tests:  2|4
total_score: 15/70
0b1a7d4
Thu 05 Oct 2023 04:59:50 PM UTC: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  2|4
total_score: 15/70
ec70604
Thu 05 Oct 2023 05:02:19 PM UTC: 
 sudoku.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  2|4
total_score: 15/70
78e7289
Thu 05 Oct 2023 05:02:47 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
8d0fb2a
Thu 05 Oct 2023 06:50:48 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
85502e2
Thu 05 Oct 2023 06:57:17 PM UTC: 
 sudoku.c | 13 +++++++------
 1 file changed, 7 insertions(+), 6 deletions(-)
 tests:  2|4
total_score: 15/70
00e88fa
Thu 05 Oct 2023 07:09:43 PM UTC: 
 sudoku.c | 12 ++++++------
 1 file changed, 6 insertions(+), 6 deletions(-)
 tests:  2|4
total_score: 15/70
ff15998
Thu 05 Oct 2023 07:10:09 PM UTC: 
 sudoku.c | 10 +++++-----
 1 file changed, 5 insertions(+), 5 deletions(-)
 tests:  2|4
total_score: 15/70
b1a8074
Thu 05 Oct 2023 08:03:13 PM UTC: 
 sudoku.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  2|4
total_score: 15/70
6d0d07a
Thu 05 Oct 2023 08:03:37 PM UTC: 
 sudoku.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  2|4
total_score: 15/70
1d2d6ff
Thu 05 Oct 2023 08:04:15 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
421f67c
Thu 05 Oct 2023 08:05:39 PM UTC: 
 sudoku.c | 12 ++++++------
 1 file changed, 6 insertions(+), 6 deletions(-)
 tests:  2|4
total_score: 15/70
c14d60f
Thu 05 Oct 2023 08:11:13 PM UTC: 
 sudoku.c | 38 ++++++++++++++++----------------------
 1 file changed, 16 insertions(+), 22 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:58:25: error: implicit declaration of function ‘push_back’; did you mean ‘pushBack’? [-Werror=implicit-function-declaration]
   58 |                         push_back(adj_nodes, new_node);
      |                         ^~~~~~~~~
      |                         pushBack
sudoku.c: In function ‘is_valid’:
sudoku.c:72:1: error: control reaches end of non-void function [-Werror=return-type]
   72 | }
      | ^
At top level:
sudoku.c:47:7: error: ‘get_adj_nodes’ defined but not used [-Werror=unused-function]
   47 | List* get_adj_nodes(Node* current_node) {
      |       ^~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
cf9d02e
Thu 05 Oct 2023 08:11:20 PM UTC: 
 sudoku.c | 1 -
 1 file changed, 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:58:25: error: implicit declaration of function ‘push_back’; did you mean ‘pushBack’? [-Werror=implicit-function-declaration]
   58 |                         push_back(adj_nodes, new_node);
      |                         ^~~~~~~~~
      |                         pushBack
sudoku.c: In function ‘is_valid’:
sudoku.c:74:7: error: redefinition of ‘get_adj_nodes’
   74 | List* get_adj_nodes(Node* n){
      |       ^~~~~~~~~~~~~
sudoku.c:47:7: note: previous definition of ‘get_adj_nodes’ with type ‘List *(Node *)’
   47 | List* get_adj_nodes(Node* current_node) {
      |       ^~~~~~~~~~~~~
test.c:245:5: error: ‘main’ is normally a non-static function [-Werror=main]
  245 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:262:1: error: expected declaration or statement at end of input
  262 | }
      | ^
test.c:263: error: control reaches end of non-void function [-Werror=return-type]
At top level:
test.c:245:5: error: ‘main’ defined but not used [-Werror=unused-function]
  245 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:7:8: error: ‘_strdup’ defined but not used [-Werror=unused-function]
    7 | char * _strdup(const char * str) {
      |        ^~~~~~~
In file included from test.c:5:
sudoku.c:47:7: error: ‘get_adj_nodes’ defined but not used [-Werror=unused-function]
   47 | List* get_adj_nodes(Node* current_node) {
      |       ^~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
e0e6c1e
Thu 05 Oct 2023 08:11:33 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:74:7: error: redefinition of ‘get_adj_nodes’
   74 | List* get_adj_nodes(Node* n){
      |       ^~~~~~~~~~~~~
sudoku.c:47:7: note: previous definition of ‘get_adj_nodes’ with type ‘List *(Node *)’
   47 | List* get_adj_nodes(Node* current_node) {
      |       ^~~~~~~~~~~~~
test.c:245:5: error: ‘main’ is normally a non-static function [-Werror=main]
  245 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:262:1: error: expected declaration or statement at end of input
  262 | }
      | ^
test.c:263: error: control reaches end of non-void function [-Werror=return-type]
At top level:
test.c:245:5: error: ‘main’ defined but not used [-Werror=unused-function]
  245 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:7:8: error: ‘_strdup’ defined but not used [-Werror=unused-function]
    7 | char * _strdup(const char * str) {
      |        ^~~~~~~
In file included from test.c:5:
sudoku.c:47:7: error: ‘get_adj_nodes’ defined but not used [-Werror=unused-function]
   47 | List* get_adj_nodes(Node* current_node) {
      |       ^~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
60e19d9
Thu 05 Oct 2023 08:11:45 PM UTC: 
 sudoku.c | 38 ++++++++++++++++++++++----------------
 1 file changed, 22 insertions(+), 16 deletions(-)
 tests:  2|4
total_score: 15/70
44d312e
Thu 05 Oct 2023 08:16:05 PM UTC: 
 sudoku.c | 7 +++++++
 1 file changed, 7 insertions(+)
 tests:  2|4
total_score: 15/70
90d54fe
Thu 05 Oct 2023 08:16:11 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|3
total_score: 25/70
20a27be
Thu 05 Oct 2023 08:18:32 PM UTC: 
 sudoku.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  3|3
total_score: 25/70
4990d09
Thu 05 Oct 2023 08:21:16 PM UTC: 
 sudoku.c | 28 ----------------------------
 1 file changed, 28 deletions(-)
 tests:  3|3
total_score: 25/70
9ae70e9
Thu 05 Oct 2023 08:22:44 PM UTC: 
 sudoku.c | 17 +++++++++++++++++
 1 file changed, 17 insertions(+)
 tests:  3|3
total_score: 25/70
2654d7e
Thu 05 Oct 2023 08:24:33 PM UTC: 
 sudoku.c | 36 ++++++++++++++++++------------------
 1 file changed, 18 insertions(+), 18 deletions(-)
 tests:  4|3
total_score: 30/70
4c0e93c
Thu 05 Oct 2023 08:24:54 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|3
total_score: 30/70
9b5aa33
Thu 05 Oct 2023 08:25:05 PM UTC: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  4|3
total_score: 30/70
f805582
Thu 05 Oct 2023 08:25:50 PM UTC: 
 sudoku.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
 tests:  4|3
total_score: 30/70
af8b2d9
Thu 05 Oct 2023 08:26:42 PM UTC: 
 sudoku.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
 tests:  4|3
total_score: 30/70
4c0f6a1
Mon 09 Oct 2023 02:03:49 AM UTC: 
 sudoku.c | 17 +++++++++++++++++
 1 file changed, 17 insertions(+)
 tests:  3|3
total_score: 25/70
d1c7026
